style menu navigation

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </nav>
     <header id="entete">
         <h1>Les prochains concerts à Rouen</h1>
-        <p><img alt="Illustration de concert" src="images/photo-5299.jpg!d.jpg"></p>
+        <center><p><img alt="Illustration de concert" src="images/photo-5299.jpg!d.jpg"></p></center>
     </header>
     <div id="concerts">
         <section class="mois" id="novembre">
