chloe article typo center

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 
 <html lang="fr">
-
+    <link href="https://fonts.googleapis.com/css?family=Public+Sans&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Anton|Public+Sans&display=swap" rel="stylesheet"> 
 <head>
     <meta charset="utf-8">
     <title>Sélecteurs CSS en action</title>
@@ -21,7 +22,7 @@
     </nav>
     <header id="entete">
         <h1>Les prochains concerts à Rouen</h1>
-        <p><img alt="Illustration de concert" src="images/photo-5299.jpg!d.jpg"></p>
+        <div class="fond"><img alt="Illustration de concert" src="images/photo-5299.jpg!d.jpg"></div>
     </header>
     <div id="concerts">
         <section class="mois" id="novembre">
